AX: Radio button members are not identified together in all cases https://bugs.webkit.org/show_bug.cgi?id=155604 <rdar://problem/21186992>

Reviewed by Darin Adler.

Source/WebCore:

Allow aria radio buttons to be grouped together as linked ui elements even if they're not input types of radio button.

Modified test: accessibility/radio-button-group-members.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::speakProperty):
(WebCore::AccessibilityRenderObject::addRadioButtonGroupChildren):
(WebCore::AccessibilityRenderObject::addRadioButtonGroupMembers):
* accessibility/AccessibilityRenderObject.h:

LayoutTests:

* accessibility/mac/radio-button-group-members-expected.txt: Added.
* accessibility/radio-button-group-members.html:
* platform/mac/accessibility/radio-button-group-members-expected.txt: Removed.


Canonical link: https://commits.webkit.org/173802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198474 268f45cc-cd09-0410-ab3c-d52691b4dbfc